# TradingAgents-CN

./: .env.example  .gitignore  ACKNOWLEDGMENTS.md  AUTHENTICATION_FIX_SUMMARY.md  BACKEND_STARTUP.md  Dockerfile.app  Dockerfile.app.cloud  Dockerfile.base  Dockerfile.data-service  README.md  README_EN.md  README_MICROSERVICE.md  VERSION  commit_msg.txt  crawler_logs.txt  docker-compose.cloud.yml  docker-compose.data-service.yml  docker-compose.layered.yml  docker-compose.yml  manage_data_service.py  migrate_env_direct.py  pyproject.toml  requirements.txt  run_data_service.py  simple_test.py  start_api.py  start_frontend.py  test_api_response.html  test_background_task.py  test_data_source_functionality.py  test_data_source_simple.py  test_download_000002.md  test_microservice_integration.py  test_mongodb_check.py  test_scheduled_tasks.py  tradingagents.archive  tradingagents_hub.archive  verify_installation.py
.github/: pull_request_template.md
.streamlit/: config.toml
app/: __main__.py  main.py  worker.py
cli/: akshare_init.py  baostock_init.py  tushare_init.py
config/: logging.toml
docs/: API_ARCHITECTURE_UPGRADE.md  API_REFERENCE.md  AUTH_TOKEN_FIX.md  BUG_FIX_ANALYSIS_STUCK.md  DEPLOYMENT_GUIDE.md  FRONTEND_ROUTE_FIX.md  LLM_ADAPTER_TEMPLATE.py  LOGIN_FLOW_FIX.md  MOCK_TOKEN_FIX.md  MULTI_PERIOD_DATA_SYNC_UPDATE.md  MULTI_SOURCE_SYNC_GUIDE.md  REFRESH_TOKEN_LOOP_FIX.md  STOCK_DATA_SERVICE_VS_DATA_SOURCE_MANAGER.md  STOCK_DETAIL_FUNDAMENTALS_ENHANCEMENT.md  UNIFIED_CONFIG.md  baidu_verify_codeva-ouhisVUSjy.html  data-service-microservice.md
examples/: microservice_usage.py  tushare_unified_demo.py
frontend/: README.md  components.d.ts  debug_blank_page.html  debug_login.html  index.html  test_api_fix.html  test_auth.html  test_multi_source_sync.html  tsconfig.tsbuildinfo  vite.config.ts
k8s/: data-service-deployment.yaml
nginx/: nginx.conf
scripts/: build_layered.bat  check_financial_data.py  init-mongo.js  push_base_image.bat  test_stock_fundamentals_enhanced.py
(+249 files in other folders)
